--- a/ex-01.html
+++ b/ex-01.html
@@ -6,6 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style type="text/css">
             /* viewport height = altura do conteúdo disponivel da pagina, pega altura da tela */
+            /* Normalizar o navegador - Resetar o navegador */
+            body {
+                margin: 0;
+                padding: 0;
+            }
+            * {
+                box-sizing: border-box;
+            }
+            /* -------------fim normalização navegador --------------- */
             div {
                 width: 100%;
                 height: 100vh;
@@ -27,6 +36,32 @@
             }
             h2 {
                 font-size: 2em;
+            }
+
+            body {
+                background: url(./assets/images/background-mobile.webp);
+                background-size: cover;
+                background-position: center center;
+            }
+
+            /* Daqui pra cima é tudo mobile */
+
+            /* tablet - começando em 768px */
+            @media (min-width: 768px) {
+                body {
+                background: url(./assets/images/background-tablet.webp);
+                background-size: cover;
+                background-position: center center;
+            }
+            }
+
+            /* desktop - a partir de 1280x */
+            @media (min-width: 1280px) {
+                body {
+                background: url(./assets/images/background-desktop.webp);
+                background-size: cover;
+                background-position: center center;
+            }
             }
         </style>
     </head>
