--- a/ex-01.html
+++ b/ex-01.html
@@ -15,7 +15,7 @@
                 box-sizing: border-box;
             }
             /* -------------fim normalização navegador --------------- */
-            div {
+            div.container {
                 width: 100%;
                 height: 100vh;
                 align-items: center;
@@ -30,6 +30,13 @@
                 font-family: 'Roboto', sans-serif;
                 color: #555;
                 padding: 20px;
+                text-align: center;
+            }
+            .container>h1.titulo {
+                color: red;
+            }
+            h1.titulo, h2.titulo {
+                color: white;
             }
             h1 {
                 font-size: 4em;
@@ -66,13 +73,13 @@
         </style>
     </head>
     <body>
-        <div>
-            <h1 style="margin:0; font-size:3em; font-weight:300; font-family:'Roboto';">
+        <div class="container">
+            <h1 class="titulo" style="margin:0; font-size:3em; font-weight:300; font-family:'Roboto';">
                 Seja bem vindo ao curso de HTML5, CSS e JavaScript
                 <!-- <img src="./assets/images/css-3.png" width="100">
                 <img src="./assets/images/js.png" width="100"> -->
             </h1>
-            <h2>No momento estamos trabalhando com:</h2>
+            <h2 class="titulo">No momento estamos trabalhando com:</h2>
             <img src="./assets/images/html-5.png" width="100">
         </div>
     </body>
