--- a/ex-01.html
+++ b/ex-01.html
@@ -22,6 +22,7 @@
                 display: flex;
                 justify-content: center;
                 flex-direction: column;
+                background-color: rgb(0,0,0, 0.5);
             }
             h1,
             h2 {
@@ -31,9 +32,6 @@
                 color: #555;
                 padding: 20px;
                 text-align: center;
-            }
-            .container>h1.titulo {
-                color: red;
             }
             h1.titulo, h2.titulo {
                 color: white;
