--- a/c6bank.html
+++ b/c6bank.html
@@ -21,5 +21,18 @@
         </nav>
         <button>Abra sua Conta</button>
     </header>
+    <section class="full-banner">
+        <div class="destak">
+            <div>
+                <h3><span>C6 GLOBAL INVEST</span> Bolsa Americana e fundos globais direto no app</h3>
+                <h1>O banco da vida de 20 milhões de pessoas</h1>
+                <h2>Conta digital, cartão de crédito, investimentos e mais: tudo em um só app</h2>
+                <button>nossos produtos</button>
+            </div>
+        </div>
+    </section>
+    <footer>
+
+    </footer>
 </body>
 </html>
