inserindo scss style no header

--- a/c6bank.html
+++ b/c6bank.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <header>
-        <div>LOGO</div>
+        <div>
+            <img src="./assets/images/c6bank/c6bank-logo-fundo-branco.jfif"
+            alt="logotipo do c6 bank"
+            width="100px">
+        </div>
         <nav>
             <ul>
                 <li><a href="#">Pessoa Física</a></li>
