incluindo fonts hover and span

--- a/c6bank.html
+++ b/c6bank.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div>
-            <img src="./assets/images/c6bank/c6bank-logo-fundo-branco.jfif"
+            <img src="./assets/images/c6bank/c6bank-logo.png"
             alt="logotipo do c6 bank"
             width="100px">
         </div>
