--- a/spread.html
+++ b/spread.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- Compiled and minified CSS -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+     <!-- Compiled and minified JavaScript -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+             
     <title>Usando Spread Operator</title>
 </head>
 <body>
     <div id="resultado"></div>
     <script src="./assets/js/spread.js" type="text/javascript"></script>
+    <button onclick="testeAlerta()">teste alerta</button>
 </body>
 </html>
